--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <input type="text" placeholder="Full Name" class="contact__form contact__form--name">
                 <input type="email" name="email" id="email" placeholder="Email address" class="contact__form contact__form--email">
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" class="contact__form contact__form--message"></textarea>
-                <button type="submit">Submit</button>
+                <button type="submit" class="contact__form contact__form--btn">Submit</button>
             </form>
         </div>
 
