Update: Updated the copyright classname

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <hr>
-            <p class="footer__copyright-message">&copy; Copyright Uzochukwu Okafor</p>
+            <p class="footer__copyright">&copy; Copyright Uzochukwu Okafor</p>
         </footer>
     </div>
 </body>
