--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Hero section starts here -->
         <div class="hero">
-            <h1 class="hero__title">Disover innovative ways to decorate</h1>
+            <h1 class="hero__title">Discover innovative ways to decorate</h1>
             <a href="#contact" class="hero__link">Contact Us</a>
         </div>
 
